# TeamTalk

./: .gitignore  LICENSE
server/src/: CMakeLists.txt  README.md  build.sh  build_ubuntu.sh  make_hiredis.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  sync_lib.sh  sync_lib_for_zip.sh
server/src/base/: Base64.cpp  BaseSocket.cpp  CMakeLists.txt  Condition.cpp  Condition.h  ConfigFileReader.cpp  ConfigFileReader.h  EncDec.cpp  EncDec.h  EventDispatch.h  HttpClient.cpp  HttpClient.h  HttpParserWrapper.cpp  HttpParserWrapper.h  ImPduBase.cpp  ImPduBase.h  Lock.cpp  Lock.h  ServInfo.cpp  ServInfo.h  TokenValidator.cpp  TokenValidator.h  UtilPdu.cpp  UtilPdu.h  atomic.h  cmake_install.cmake  http_parser.cpp  http_parser.h  im_conn_util.cpp  im_conn_util.h  imconn.cpp  imconn.h  impdu.h  log4z.cpp  log4z.h  netlib.cpp  public_define.h  singleton.h  util.cpp  util.h  (+1 more)
server/src/base/security/: security.h
server/src/db_proxy_server/: AutoPool.cpp  AutoPool.h  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.cpp  ProxyConn.h  ProxyTask.cpp  ProxyTask.h  README  SyncCenter.cpp  SyncCenter.h  db_proxy_server.cpp  dbproxyserver.conf  hiredis.h
server/src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  Common.h  DepartAction.cpp  DepartAction.h  DepartModel.cpp  DepartModel.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  Login.h  LoginStrategy.h  MessageContent.cpp  MessageContent.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  MessageModel.h  RecentSession.cpp  RecentSession.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp  UserAction.h  UserModel.cpp  UserModel.h
server/src/file_server/: CMakeLists.txt  config_util.cpp  config_util.h  file_client_conn.cpp  file_client_conn.h  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  file_server_util.h  fileserver.conf  offline_file_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
server/src/http_msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpConn.h  HttpPdu.cpp  HttpPdu.h  HttpQuery.cpp  HttpQuery.h  RouteServConn.cpp  RouteServConn.h  http_msg_server.cpp  httpmsgserver.conf
server/src/libsecurity/android/: build.sh
server/src/libsecurity/include/: security.h
server/src/libsecurity/src/: aes_core.cpp  md5.cpp  security.cpp
server/src/libsecurity/unix/: build.sh
server/src/log4cxx/: socketoutputstream.cpp
server/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  LoginConn.h  ipparser.cpp  ipparser.h  log4cxx.properties  login_server.cpp  loginserver.conf
server/src/msfs/: CMakeLists.txt  FileLin.cpp  FileLin.h  FileManager.cpp  FileManager.h  HttpConn.cpp  HttpConn.h  Portable.h  main.cpp  msfs.conf  msfs.conf.example
server/src/msg_server/: AttachData.cpp  AttachData.h  CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.cpp  FileHandler.h  FileServConn.cpp  FileServConn.h  GroupChat.cpp  GroupChat.h  ImUser.cpp  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  RouteServConn.h  jsonxx.cpp  msg_server.cpp  msgserver.conf  policy.xml
server/src/push_server/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  apns_client.cpp  apns_client.h  apns_client_handler.cpp  apns_client_handler.h  apns_feedback_handler.cpp  apns_feedback_handler.h  apns_msg.cpp  apns_msg.h  byte_stream.cpp  byte_stream.h  jsonxx.h  main.cpp  pdu_msg.cpp  pdu_msg.h  push_app.cpp  push_app.h  push_app_define.h  push_define.h  push_server.cpp  push_server.h  push_server_handler.cpp  push_server_handler.h  push_session.cpp  push_session.h  push_session_handler.cpp  push_session_handler.h  pushserver.conf  session_manager.cpp  session_manager.h
server/src/push_server/sigslot/: sigslot.h
server/src/push_server/socket/: base_handler.hpp  base_socket.hpp  base_thread.hpp  ssl_client_async.cpp  ssl_client_async.h
server/src/route_server/: CMakeLists.txt  RouteConn.cpp  RouteConn.h  UserInfo.cpp  UserInfo.h  route_server.cpp  routeserver.conf
server/src/se/: base.vpj  db_proxy_server.vpj  file_server.vpj  http_msg_server.vpj  libsecurity.vpj  log4cxx.vpj  login_server.vpj  msfs.vpj  msg_server.vpj  push_server.vpj  route_server.vpj  slog.vpj  teamtalk-server.vpw  teamtalk-server.vpwhist  teamtalk-server.vpwhistu  teamtalk-server.vtg  test.vpj
server/src/slog/: CMakeLists.txt  log4cxx.properties  slog_api.cpp  slog_api.h
server/src/test/: Client.cpp  Client.h  ClientConn.cpp  ClientConn.h  Common.h  IPacketCallback.h  Makefile  SeqAlloctor.cpp  SeqAlloctor.h  playsound.h  playsound.mm  test_client.cpp
server/src/tools/: Makefile  monitor.sh
(+2030 files in other folders)
